Set closure type on keyEventTarget

--- a/iron-a11y-keys-behavior.html
+++ b/iron-a11y-keys-behavior.html
@@ -250,6 +250,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       properties: {
         /**
          * The HTMLElement that will be firing relevant KeyboardEvents.
+         * @type {!EventTarget}
          */
         keyEventTarget: {
           type: Object,
